--- a/glossaryEntries.tex
+++ b/glossaryEntries.tex
@@ -12,3 +12,8 @@
 \newacronym{manet}{MANET}{Mobile Ad hoc Network}
 \newacronym{vpn}{VPN}{Virtual Private Network}
 \newacronym{vppn}{VPPN}{Virtual Private Payment Payment}
+\newglossaryentry{off-chain}
+{
+    name=off-chain,
+    description={An off-chain transaction is the movement of value outside of the block chain.}
+}
