--- a/biblio.tex
+++ b/biblio.tex
@@ -1,7 +1,2 @@
-\begin{thebibliography}{1}
-
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
-
-\end{thebibliography}
+\bibliographystyle{unsrt} % We choose the "unsrt" reference style so we can sort the bib like we want
+\bibliography{refs} % Entries are in the "refs.bib" file
